update validation error